force-app/main/default/objects/True_Link_Trigger_Switch__c/True_Link_Trigger_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>True Link Trigger Switch</label>
</CustomObject>