force-app/main/default/objects/True_Link_Trigger_Switch__c/fields/Create_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Create_Beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Beneficiary</label>
    <type>Checkbox</type>
</CustomField>