force-app/main/default/objects/True_Link_Trigger_Switch__c/fields/Update_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Update_Beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Beneficiary</label>
    <type>Checkbox</type>
</CustomField>