force-app/main/default/objects/True_Link_Trigger_Switch__c/fields/Update_Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Update_Beneficiary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Beneficiary Address</label>
    <type>Checkbox</type>
</CustomField>